# Lorax

./: README.md  pyproject.toml
src/lorax/: __init__.py  __main__.py  lorax.py
