[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lorax-tree"
version = "0.1.0"
description = "A tiny tool to print a clean directory tree."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Rudy van den Brink" }
]
dependencies = [
  "pathspec>=0.12",
]

# Optional but very helpful
keywords = ["tree", "directory", "structure", "docs", "readme"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rudyvdbrink/Lorax"
Source = "https://github.com/rudyvdbrink/Lorax"

[project.scripts]
lorax = "lorax.__main__:main"